css/main.css
/* Fixes carousel size on large screens */
@media (min-width: 992px) {
    .carousel-item {
        height: 25em;
    }
    .carousel-inner .carousel-item img{
        position: relative;
        top: 50%;
        transform: translateY(-50%)
    }
}

/* Sets background image for gear jumbotron */
#gear-jumbotron.jumbotron{
    background: url("../images/jumbotron/gear-jumbo-4.jpg")
        center center;
    background-size: cover;
}
/* Sets background image for brands jumbotron */
#brands-jumbotron.jumbotron{
    background: url("../images/jumbotron/brands-jumbo-1-min.jpg")
        center center;
    background-size: cover;
}
/* Sets background image for abilities jumbotron */
#abilities-jumbotron.jumbotron{
    background: url("../images/jumbotron/abilities-jumbo-2-min.jpg")
        center center;
    background-size: cover;
}
/* Sets background image for weapons jumbotron */
#weapons-jumbotron.jumbotron{
    background: url("../images/jumbotron/weapons-jumbo-1-min.jpg")
        center center;
    background-size: cover;
}
#placeholder-jumbotron.jumbotron{
    background: url("../images/jumbotron/placeholder-jumbo-2.jpg")
        center center;
    background-size: cover;
}
/* Sets jumbotron color and stroke */
/* Not sure why increasing font size makes the jumbotron larger */
.jumbotron h1{
    color: #FDFF00;
    font-family: 'splatoon2regular', Helvetica, sans-serif;
    text-shadow: -1px 0 #000000, 0 1px #000000, 1px 0 #000000, 0 -1px #000000;
}
.jumbotron p{
    color: #FDFF00;
    font-family: 'splatoon2regular', Helvetica, sans-serif;
    text-shadow: -1px 0 #000000, 0 1px #000000, 1px 0 #000000, 0 -1px #000000;
}

/* Sets button text when clicked. Should combine these later with wildcards */
#specials-table .btn-primary:before {
    content:'Click for details';
}
#specials-table .btn-primary[aria-expanded="true"]:before {
    content:'Close Details';
}
#subs-table .btn-primary:before {
    content:'Click for details';
}
#subs-table .btn-primary[aria-expanded="true"]:before {
    content:'Close Details';
}
/* More Subs/Specials stuff */
#subs-table td.collapse-row {
    border-style: none;
    padding: 0;
}
#specials-table td.collapse-row {
    border-style: none;
    padding: 0;
}
/* Masonry stuff */
.grid {
  background: #EEE;
  max-width: 1200px;
}

/* clearfix */
.grid:after {
  content: '';
  display: block;
  clear: both;
}

/* ---- grid-item ---- */

.grid-sizer,
.grid-item {
  width: 20%;
}

.grid-item {
  height: 120px;
  float: left;
  background: #D26;
  border: 2px solid #333;
  border-color: hsla(0, 0%, 0%, 0.5);
  border-radius: 5px;
}

.grid-item--width2 { width:  40%; }
.grid-item--width3 { width:  60%; }

.grid-item--height2 { height: 200px; }
.grid-item--height3 { height: 260px; }
.grid-item--height4 { height: 360px; }
/*.item {
    width: 200px;
    float: left;
}
.item img {
    display: block;
    width: 100%;
}
.item {
  background: #0D8;
  border: 1px solid #333;
  border-color: hsla(0, 0%, 0%, 0.7);
}
#images:after {
  content: '';
  display: block;
  clear: both;
}*/


/*Isotope stuff*/
/*.isotope .isotope-item {
    -webkit-transition-duration: 0.8s;
    -moz-transition-duration: 0.8s;
    transition-duration: 0.8s;
    -webkit-transition-property: -webkit-transform, opacity;
    -moz-transition-property: -moz-transform, opacity;
    transition-property: transform, opacity;
}*/
/*.grid:after {
  content: '';
  display: block;
  clear: both;
}*/
/* 5 columns, percentage width */
/*.grid-sizer, .grid-item {
  width: 20%;
}*/

/*.grid-item {
  float: left;
   prefer gaps over overlaps 
  width: calc( 20% - 1px );
  height: 100px;
  background: #0D8;
  border: 1px solid #333;
  border-color: hsla(0, 0%, 0%, 0.7);
}
.grid-item--width2 {
  width: 40%;
  width: calc( 40% - 1px );
}
.grid-item--height2 { height: 200px; }*/
/*.item {
    width: 20%;
    background-color: white;
    float: left;
}*/

/* I forgot why this is here ¯\_(ツ)_/¯ */
.tab-content {
    padding:10px;
    border-left:1px solid #DDD;
    border-bottom:1px solid #DDD;
    border-right:1px solid #DDD;
}

